NetBSD Problem Report #46660

From www@NetBSD.org  Thu Jul  5 06:10:27 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id E4B1263B882
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  5 Jul 2012 06:10:26 +0000 (UTC)
Message-Id: <20120705061026.2EF5163B85F@www.NetBSD.org>
Date: Thu,  5 Jul 2012 06:10:26 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Fix typo in deviceid.c
X-Send-Pr-Version: www-1.0

>Number:         46660
>Category:       lib
>Synopsis:       Fix typo in deviceid.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jul 05 06:15:00 +0000 2012
>Closed-Date:    Thu Jul 05 18:50:55 +0000 2012
>Last-Modified:  Thu Jul 05 18:50:55 +0000 2012
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Fix typo in deviceid.c, from FreeBSD.
>How-To-Repeat:

>Fix:
diff -u -p -r1.1 deviceid.c
--- external/cddl/osnet/lib/libzfs/deviceid.c	7 Aug 2009 20:57:56 -0000	1.1
+++ external/cddl/osnet/lib/libzfs/deviceid.c	5 Jul 2012 04:01:37 -0000
@@ -78,7 +78,7 @@ devid_str_decode(char *devidstr, ddi_dev
 		return (EINVAL);
 	}
 	*retminor_name = strdup("");
-	if (*retminor_name == NULL);
+	if (*retminor_name == NULL)
 		return (ENOMEM);
 	return (0);
 }

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46660 CVS commit: src/external/cddl/osnet/lib/libzfs
Date: Thu, 5 Jul 2012 09:55:58 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jul  5 13:55:58 UTC 2012

 Modified Files:
 	src/external/cddl/osnet/lib/libzfs: deviceid.c

 Log Message:
 PR/46660: Henning Petersen: Fix typo in deviceid.c


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/external/cddl/osnet/lib/libzfs/deviceid.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Thu, 05 Jul 2012 18:50:55 +0000
State-Changed-Why:
christos fixed it, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.