PR/46660: Henning Petersen: Fix typo in deviceid.c